docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/carousel.mdx
---
title: Carousel
description: Jetpack Compose Carousel components for displaying scrollable collections of items.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI provides three carousel components matching the official Jetpack Compose [Carousel](https://developer.android.com/develop/ui/compose/components/carousel) API: `HorizontalCenteredHeroCarousel`, `HorizontalMultiBrowseCarousel`, and `HorizontalUncontainedCarousel`.

> **Note:** Carousel is a horizontally scrollable component, so the parent `Host` must provide a finite width on the scroll axis. Use `matchContents={{ vertical: true }}` together with `style={{ width: '100%' }}` (or any finite width). See [Match contents in Host reference](host/#match-contents) for details.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/carousel/android-light.webp"
  darkSrc="/static/images/expo-ui/carousel/android-dark.webp"
  alt="Material 3 multi-browse carousel with a hero item and smaller peek items"
/>

## Installation

<APIInstallSection />

## Usage

### HorizontalCenteredHeroCarousel

Centers one large hero item between two small peek items — ideal for spotlighting content like movie posters.

<ComponentExample
  title="CenteredHeroExample.tsx"
  src="/static/images/expo-ui/examples/carousel-centered-hero-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/carousel-centered-hero-android-dark.webp"
  alt="A wide purple hero slide with two narrow peek slides beside it">

```tsx
import {
  Host,
  HorizontalCenteredHeroCarousel,
  Box,
  Text,
} from '@expo/ui/jetpack-compose';
import {
  size,
  background,
  maskClip,
  Shapes,
} from '@expo/ui/jetpack-compose/modifiers';

export default function CenteredHeroExample() {
  const colors = [
    '#6200EE',
    '#03DAC5',
    '#FF5722',
    '#4CAF50',
    '#2196F3',
  ];

  return (
    <Host
      matchContents={{ vertical: true }}
      style={{ width: '100%' }}>
      <HorizontalCenteredHeroCarousel itemSpacing={8}>
        {colors.map((color, index) => (
          <Box
            key={index}
            contentAlignment="center"
            modifiers={[
              size(300, 200),
              maskClip(Shapes.RoundedCorner(28)),
              background(color),
            ]}>
            <Text color="#FFFFFF">Slide {index + 1}</Text>
          </Box>
        ))}
      </HorizontalCenteredHeroCarousel>
    </Host>
  );
}
```

</ComponentExample>

### HorizontalMultiBrowseCarousel

Shows a large item alongside smaller peek items, letting users browse what comes next.

<ComponentExample
  title="MultiBrowseExample.tsx"
  src="/static/images/expo-ui/examples/carousel-multi-browse-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/carousel-multi-browse-android-dark.webp"
  alt="A large first card followed by progressively narrower peek cards">

```tsx
import {
  Host,
  HorizontalMultiBrowseCarousel,
  Box,
  Text,
} from '@expo/ui/jetpack-compose';
import {
  size,
  background,
} from '@expo/ui/jetpack-compose/modifiers';

export default function MultiBrowseExample() {
  const colors = [
    '#6200EE',
    '#03DAC5',
    '#FF5722',
    '#4CAF50',
    '#2196F3',
  ];

  return (
    <Host
      matchContents={{ vertical: true }}
      style={{ width: '100%' }}>
      <HorizontalMultiBrowseCarousel
        preferredItemWidth={200}
        itemSpacing={8}
        flingBehavior="singleAdvance">
        {colors.map((color, index) => (
          <Box
            key={index}
            contentAlignment="center"
            modifiers={[size(200, 180), background(color)]}>
            <Text color="#FFFFFF">Card {index + 1}</Text>
          </Box>
        ))}
      </HorizontalMultiBrowseCarousel>
    </Host>
  );
}
```

</ComponentExample>

### HorizontalUncontainedCarousel

Each item has a fixed width with free-form scrolling.

<ComponentExample
  title="UncontainedExample.tsx"
  src="/static/images/expo-ui/examples/carousel-uncontained-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/carousel-uncontained-android-dark.webp"
  alt="Equal width photo cards scrolling off the edge of the screen">

```tsx
import {
  Host,
  HorizontalUncontainedCarousel,
  Box,
  Text,
} from '@expo/ui/jetpack-compose';
import {
  size,
  background,
} from '@expo/ui/jetpack-compose/modifiers';

export default function UncontainedExample() {
  const items = [
    'Photo 1',
    'Photo 2',
    'Photo 3',
    'Photo 4',
    'Photo 5',
  ];

  return (
    <Host
      matchContents={{ vertical: true }}
      style={{ width: '100%' }}>
      <HorizontalUncontainedCarousel
        itemWidth={160}
        itemSpacing={12}
        contentPadding={{ start: 16, top: 0, end: 16, bottom: 0 }}>
        {items.map(item => (
          <Box
            key={item}
            contentAlignment="center"
            modifiers={[size(160, 180), background('#3F51B5')]}>
            <Text color="#FFFFFF">{item}</Text>
          </Box>
        ))}
      </HorizontalUncontainedCarousel>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import {
  HorizontalCenteredHeroCarousel,
  HorizontalMultiBrowseCarousel,
  HorizontalUncontainedCarousel,
} from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/carousel"
  apiName="Carousel"
/>
